--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "d3-array": "^1.0.1",
+    "d3-scale": "^1.0.3",
+    "d3-shape": "^1.0.3",
+    "moment": "^2.15.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
