Render chart using React ART

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3-shape": "^1.0.3",
     "moment": "^2.15.2",
     "react": "^15.3.2",
+    "react-art": "^0.15.1",
     "react-dom": "^15.3.2"
   },
   "scripts": {
