Setup correct URL path for production build

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stock-chart",
   "version": "0.1.0",
   "repository": "https://github.com/sergeylukin/stock-chart.git",
+  "homepage": "http://sergeylukin.com/stock-chart/",
   "private": true,
   "devDependencies": {
     "autoprefixer": "6.5.1",
