--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^15.3.2"
   },
   "scripts": {
+    "postinstall": "sed -i -e 's:react/lib:react-dom/lib:g' node_modules/react-art/lib/ReactART.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
