--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "3.8.1",
     "eslint-config-i-am-meticulous": "^5.0.2",
     "eslint-config-react-app": "^0.3.0",
+    "eslint-import-resolver-webpack": "^0.7.0",
     "eslint-loader": "1.6.0",
     "eslint-plugin-flowtype": "2.21.0",
     "eslint-plugin-import": "2.0.1",
@@ -30,6 +31,7 @@
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "find-cache-dir": "0.1.1",
+    "flow-bin": "^0.36.0",
     "fs-extra": "0.30.0",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
