--- a/native/.flowconfig
+++ b/native/.flowconfig
@@ -9,6 +9,8 @@
 # Ignore malformed json
 .*/node_modules/y18n/test/.*\.json
 
+.*/node_modules/react-native
+
 # Ignore the website subdir
 <PROJECT_ROOT>/website/.*
 
@@ -55,4 +57,4 @@ suppress_comment=\\(.\\|\n\\)*\\$FlowFixedInNextDeploy
 unsafe.enable_getters_and_setters=true
 
 [version]
-^0.33.0
+^0.36.0
